k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-api
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
